--- a/style.css
+++ b/style.css
@@ -64,9 +64,9 @@ nav {
 .close-icon,
 .hamber-icon {
   display: none;
-  width: 4.8rem;
+  width: 3rem;
   opacity: 0.8;
-  height: 4.8rem;
+  height: 3rem;
 }
 
 .nav-list-item {
@@ -481,6 +481,9 @@ nav {
     transform: translate(-50%, 0%);
   }
 
+  .gallery-heading {
+    margin-bottom: 270%;
+  }
   .first {
     background-image: linear-gradient(
         90deg,
@@ -580,8 +583,11 @@ nav {
     left: 6%;
   }
 
+  .gallery-heading {
+    margin-bottom: 470%;
+  }
   .gallery-text {
-    height: 208vh;
+    /* height: 208vh; */
     min-width: 40rem;
   }
 
@@ -619,7 +625,11 @@ nav {
   }
 
   .gallery-text {
-    height: 126vh;
+    height: auto;
+  }
+
+  .gallery-heading {
+    margin-bottom: 470%;
   }
 
   .nav-list-footer ul {
