--- a/style.css
+++ b/style.css
@@ -71,10 +71,10 @@ nav {
 
 .nav-list-item {
   display: inline;
-  margin-left: 2.4rem;
+  margin-left: 3.6rem;
   font-family: var(--desc-font);
   color: white;
-  font-size: 1.8rem;
+  font-size: 2.4rem;
 }
 
 .hero-heading-box {
@@ -169,7 +169,7 @@ nav {
   align-self: center;
   font-size: 1.4rem;
   cursor: pointer;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .gallery-btn:hover {
@@ -480,15 +480,13 @@ nav {
     flex-direction: column;
     position: absolute;
     z-index: 1;
-    /* background-color: red;*/
     left: 50%;
     top: 0%;
-    height: 70vh;
     transform: translate(-50%, 0%);
   }
 
   .gallery-heading {
-    margin-bottom: 270%;
+    margin-bottom: 200%;
   }
   .first {
     background-image: linear-gradient(
@@ -634,8 +632,7 @@ nav {
     height: auto;
   }
 
-  .close-icon
-  {
+  .close-icon {
     width: 4.4rem;
     height: 4.4rem;
   }
